src/test/ui/issues/issue-35677.stderr
error[E0599]: no method named `is_subset` found for type `&std::collections::HashSet<T>` in the current scope
  --> $DIR/issue-35677.rs:4:10
   |
LL |     this.is_subset(other)
   |          ^^^^^^^^^
   |
   = note: the method `is_subset` exists but the following trait bounds were not satisfied:
           `T : std::cmp::Eq`
           `T : std::hash::Hash`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
